# test-oaipmh

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
testinvenio/: cli.py  config.py  minters.py  records.py
testinvenio/mappings/v7/testinvenio/: oai-record.json
