[tool.poetry]
name = "testinvenio"
version = "0.9.0"
description = "oaipmh test"
authors = [
    "Mirek Simek <miroslav.simek@vscht.cz>"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

oarepo = "^3.3.0"
oarepo-micro-api = "^1.0.0"
oarepo-invenio-model = "^2.0.1"
invenio-oaiserver = "^1.2.0"


[tool.poetry.plugins."invenio_base.api_apps"]
testinvenio = "testinvenio.ext:TestExt"


[tool.poetry.plugins."invenio_base.apps"]
testinvenio = "testinvenio.ext:TestExt"

[tool.poetry.plugins."invenio_search.mappings"]
testinvenio = "testinvenio.mappings"

[tool.poetry.plugins."flask.commands"]
oaitest = 'testinvenio.cli:oaitest'

[tool.poetry.plugins."invenio_pidstore.minters"]
recid_oai = "testinvenio.minters:minter"


[tool.poetry.dev-dependencies]
wheel = "^0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
